--- a/src/components/NavBars/NavBars.css
+++ b/src/components/NavBars/NavBars.css
@@ -3,7 +3,7 @@
   display: flex;
   width: 100%;
   /* position: relative; */
-  /* position: absolute; */
+  position: absolute;
   bottom: 0.5rem;
   /* border-bottom: none; */
 }
