--- a/src/components/NavBars/NavBars.css
+++ b/src/components/NavBars/NavBars.css
@@ -1,9 +1,16 @@
 .tabs ul {
   border-top: 1px solid #dbdbdb;
   display: flex;
-  width: 100%;
-  /* position: relative; */
-  position: absolute;
+  max-width: 100vw;
   bottom: 0.5rem;
-  /* border-bottom: none; */
+}
+
+.tabs, .is-centered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  max-width: 100vw;
+  bottom: 3px;
+  /* border: 1px solid red; */
 }
