--- a/src/components/NavBars/NavBars.css
+++ b/src/components/NavBars/NavBars.css
@@ -9,7 +9,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  text-align: center;
+  /* position: absolute; */
   max-width: 100vw;
   bottom: 3px;
   /* border: 1px solid red; */
