--- a/src/components/MyTrips/MyTrips.css
+++ b/src/components/MyTrips/MyTrips.css
@@ -96,6 +96,46 @@ h1 {
   margin-bottom: 1rem;
 }
 
+#AddTrip-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  /* margin: 1rem; */
+  max-height: 80vh;
+  width: 100%;
+  /* border: 1px solid; */
+}
+
+.AddTrip-title-bar {
+  display: flex;
+  justify-content: center;
+  margin: 1rem 0 1rem 0;
+  width: 100%;
+}
+
+.AddTrip-title {
+  font-size: 1.5rem;
+}
+
+.AddTrip-form {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center;
+  padding: 1.5rem;
+  width: 100%;
+}
+
+label {
+  text-align: left;
+}
+
+.field {
+  width: 100%;
+}
+
 .icon {
   margin-right: 5px;
   color: #3f83bc;
