--- a/src/components/NavBars/NavBars.css
+++ b/src/components/NavBars/NavBars.css
@@ -1,17 +1,17 @@
 .tabs ul {
   border-top: 1px solid #dbdbdb;
   display: flex;
+  justify-content: space-around;
   max-width: 100vw;
   bottom: 0.5rem;
 }
 
 .tabs, .is-centered {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  /* position: absolute; */
-  max-width: 100vw;
+  position: absolute;
+  max-width: 100%;
   bottom: 3px;
-  /* border: 1px solid red; */
+}
+
+.tabs a {
+  padding: 0.5em;
 }
