--- a/src/components/TripFlights/TripFlights.css
+++ b/src/components/TripFlights/TripFlights.css
@@ -109,6 +109,43 @@ h1 {
   margin-bottom: 1rem;
 }
 
+#AddFlight-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  /* margin: 1rem; */
+  max-height: 80vh;
+  width: 100%;
+  /* border: 1px solid; */
+}
+
+.AddFlight-title-bar {
+  display: flex;
+  justify-content: center;
+  margin: 1rem 0 1rem 0;
+  width: 100%;
+}
+
+.AddFlight-title {
+  font-size: 1.5rem;
+}
+
+.AddFlight-form {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center;
+  padding: 1.5rem;
+  width: 100%;
+}
+
+label {
+  text-align: left;
+  margin-left: 2px;
+}
+
 .icon {
   margin-right: 5px;
   color: #3f83bc;
