--- a/src/components/NavBars/NavBars.css
+++ b/src/components/NavBars/NavBars.css
@@ -4,9 +4,8 @@
   justify-content: center;
   text-align: center;
   position: absolute;
+  background: #ffffff;
   width: 100%;
-  /* margin-left: 2px;
-  margin-right: 2px; */
   bottom: 3px;
 }
 
@@ -15,7 +14,7 @@
   display: flex;
   justify-content: space-between;
   font-size: 14px;
-  max-width: 96%;
+  max-width: 95%;
   bottom: 0.5rem;
 }
 
