--- a/src/components/MyTrips/MyTrips.css
+++ b/src/components/MyTrips/MyTrips.css
@@ -116,7 +116,7 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 0.5rem 1.5rem 0.5rem 1.5rem;
+  padding: 0 1.5rem 0 1.5rem;
   width: 100%;
 }
 
