--- a/src/components/TripFlights/TripFlights.css
+++ b/src/components/TripFlights/TripFlights.css
@@ -135,9 +135,8 @@ h1 {
 .AddFlight-form {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
   justify-content: center;
-  padding: 1.5rem;
+  padding: 0 1.5rem 0 1.5rem;
   width: 100%;
 }
 
