add error div for login/signup

--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -55,6 +55,12 @@ img {
   max-width: 48.5%;
 }
 
+.LoginSignup-error {
+  margin-top: 1em;
+  font-style: italic;
+  color: red;
+}
+
 .footer {
   color: #363636;
   font-family: Montserrat, sans-serif;
