--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -65,7 +65,7 @@ img {
   color: #363636;
   font-family: Montserrat, sans-serif;
   font-weight: bold;
-  padding: 2rem 1.5rem 2rem 1.5rem;
+  padding: 1.5rem;
   /* position: absolute; */
   bottom: 0;
   /* width: 100%; */
