--- a/src/components/TripFlights/TripFlights.css
+++ b/src/components/TripFlights/TripFlights.css
@@ -169,6 +169,22 @@ label {
   width: 100%;
 }
 
+.TrackFlight {
+  display: flex;
+  justify-content: center;
+  margin: 1.5em 0 0 0;
+  width: 100%;
+}
+
+#TrackFlight-button {
+  width: 100%;
+}
+
+#TrackFlight-track {
+  background-color: #3f83bc;
+  width: 100%;
+}
+
 .icon {
   margin-right: 5px;
   color: #3f83bc;
