--- a/src/components/TripFlights/TripFlights.css
+++ b/src/components/TripFlights/TripFlights.css
@@ -20,7 +20,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 1.5rem 0 1rem 0;
+  margin: 1.5rem 0 0.5rem 0;
 }
 
 .TripFlights-title-name {
@@ -111,6 +111,7 @@ h1 {
 #TripsFlightCard-updated {
   font-size: 13px;
   font-style: italic;
+  margin-top: 0.5em;
 }
 
 .message {
