complete add flight action and fix cal div

--- a/src/components/TripFlights/TripFlights.css
+++ b/src/components/TripFlights/TripFlights.css
@@ -232,7 +232,6 @@ label {
   font-size: 20px;
 }
 
-/* .AddFlight-depart {
-  border: 2px solid red;
+.react-datepicker-wrapper, .react-datepicker__input-container {
   width: 100%;
-} */
+}
