--- a/src/components/NavBars/NavBars.css
+++ b/src/components/NavBars/NavBars.css
@@ -31,3 +31,28 @@ a.navbar-item:hover, a.navbar-item.is-active, a.navbar-link:hover, a.navbar-link
   width: 10em;
   /* remove width when adding back in /track button */
 }
+
+.notify-alert-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  /* margin: auto; */
+}
+
+.notify-alert {
+  display: flex;
+  flex-wrap: wrap;
+  /* flex-direction: column; */
+  background-color: #90b7d3;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  border-radius: 2px;
+}
+
+.notify-text {
+  font-style: italic;
+  font-size: 15px;
+  align-self: center;
+}
